force-app/main/default/objects/LM_ContaLoja__c/LM_ContaLoja__c.object-meta.xml
<CustomObject>
    <label>ContaLoja</label>
    <nameField>
        <displayFormat>IL-{0000}</displayFormat>
        <label>ContaLoja Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ContasLojas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>