force-app/main/default/objects/LM_ContaLoja__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <filterItems>
            <field>Account.Record_Type_API_Name__c</field>
            <operation>equals</operation>
            <value>LM_Installer</value>
        </filterItems>
        <filterItems>
            <field>Account.Record_Type_API_Name__c</field>
            <operation>equals</operation>
            <value>LM_Transportadora</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>InstaladoresLojas</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>