force-app/main/default/objects/LM_ContaLoja__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Nome da Conta</label>
    <type>Text</type>
</CustomField>