force-app/main/default/objects/LM_ContaLoja__c/fields/Certification_No__c.field-meta.xml
<CustomField>
    <fullName>Certification_No__c</fullName>
    <formula>Account__r.Certification_No__c</formula>
    <label>Número de Certificação</label>
    <type>Text</type>
</CustomField>