force-app/main/default/objects/LM_ContaLoja__c/fields/Installer_Name__c.field-meta.xml
<CustomField>
    <fullName>Installer_Name__c</fullName>
    <formula>Account__r.Name</formula>
    <label>Nome do Instalador</label>
    <type>Text</type>
</CustomField>