force-app/main/default/objects/LM_ContaLoja__c/fields/Is_LM_Installer__c.field-meta.xml
<CustomField>
    <fullName>Is_LM_Installer__c</fullName>
    <formula>Account__r.Is_LM_Installer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is LM Installer</label>
    <type>Checkbox</type>
</CustomField>