force-app/main/default/objects/LM_ContaLoja__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <formula>TEXT(Account__r.Processo__c)</formula>
    <label>Processo</label>
    <type>Text</type>
</CustomField>