force-app/main/default/objects/LM_ContaLoja__c/fields/Processos__c.field-meta.xml
<CustomField>
    <fullName>Processos__c</fullName>
    <formula>IF(INCLUDES(Account__r.Processos__c, &quot;Assistência Técnica&quot;), &quot;Assistência Técnica;&quot;, &quot;&quot;) +
IF(INCLUDES(Account__r.Processos__c, &quot;DCI&quot;), &quot;DCI;&quot;, &quot;&quot;) +
IF(INCLUDES(Account__r.Processos__c, &quot;Certificado de Devolução&quot;), &quot;Certificado de Devolução;&quot;, &quot;&quot;)</formula>
    <label>Processos</label>
    <type>Text</type>
</CustomField>