force-app/main/default/objects/LM_ContaLoja__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <label>Loja</label>
    <referenceTo>LM_Store__c</referenceTo>
    <relationshipName>InstaladoresLojas</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>