force-app/main/default/objects/LM_ContaLoja__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <formula>Store__r.Store_API_Name__c</formula>
    <label>Store Code</label>
    <type>Text</type>
</CustomField>