force-app/main/default/objects/LM_ContaLoja__c/fields/Tipo_de_Conta__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Conta__c</fullName>
    <formula>Account__r.Record_Type_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tipo de Conta</label>
    <type>Text</type>
</CustomField>