force-app/main/default/objects/LM_ContaLoja__c/fields/Unique_ContaLoja__c.field-meta.xml
<CustomField>
    <fullName>Unique_ContaLoja__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Unique_ContaLoja</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>